Fixed issue where links were overflowing modal box

--- a/sass/elem_base.scss
+++ b/sass/elem_base.scss
@@ -61,6 +61,10 @@ span.descr_emph {
     filter: drop-shadow(-5px 0px 5px rgba(0, 0, 0, 0.5));
 }
 
+.modal-body {
+    word-wrap: break-word;
+}
+
 .more_info_btn {
     // margin-top: 7px;
 }
